homeassistant/NetworkPolicy-mariadb-mariadb-galera.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: mariadb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mariadb-galera
    app.kubernetes.io/version: 11.8.2
    helm.sh/chart: mariadb-galera-15.0.1
  name: mariadb-mariadb-galera
  namespace: homeassistant
spec:
  egress:
    - {}
  ingress:
    - ports:
        - port: 3306
        - port: 4567
        - port: 4568
        - port: 4444
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: mariadb
      app.kubernetes.io/name: mariadb-galera
  policyTypes:
    - Ingress
    - Egress
